--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
+    <!-- normalize css -->
     <link
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.min.css"
     />
-    <link href="./css/styles.css" rel="stylesheet" />
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- custom styles -->
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- page header -->
+    <!-- #region page Header -->
     <header class="header">
       <div class="div-header container">
         <nav class="nav">
@@ -25,7 +28,7 @@
             >web<span class="accent">studio</span></a
           >
           <ul class="nav-menu">
-            <li><a class="nav-link-studio">Studio</a></li>
+            <li><a class="nav-link studio">Studio</a></li>
             <li><a class="nav-link">Portfolio</a></li>
             <li><a class="nav-link">Contacts</a></li>
           </ul>
@@ -44,19 +47,26 @@
             </li>
           </ul>
         </address>
+        <button class="mobile-menu-button">
+          <svg class="mobile-menu-icon" width="18" height="18">
+            <use href="./images/icons.svg#mobile-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
-    <!-- main content -->
+    <!-- #endregion -->
     <main>
-      <!-- section1 -->
-      <section class="main-page">
+      <!-- #region Hero -->
+      <section class="hero-page">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
       </section>
-      <!-- section2 -->
-      <section class="peculiarities">
+      <!-- #endregion -->
+
+      <!-- #region Peculiarities -->
+      <section class="section peculiarities">
         <div class="container">
           <h2 class="visually-hidden">Our peculiarities</h2>
           <ul class="peculiarities-list">
@@ -96,7 +106,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="peculiarities-list-item">
               <div class="peculiarities-icon">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -111,14 +121,17 @@
           </ul>
         </div>
       </section>
-      <!-- section3 -->
-      <section class="team-page">
+      <!-- #endregion -->
+
+      <!-- #region Team -->
+      <section class="section team-page">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-item">
               <img
-                src="./images/img.jpg"
+                srcset="./images/team1.jpg 1x, ./images/team1@2x.jpg 2x"
+                src="./images/team1.jpg"
                 alt="Portrait of a man"
                 width="264"
                 height="260"
@@ -160,7 +173,8 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/img2.jpg"
+                srcset="./images/team2.jpg 1x, ./images/team2@2x.jpg 2x"
+                src="./images/team2.jpg"
                 alt="Portrait of a man"
                 width="264"
                 height="260"
@@ -202,7 +216,8 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/img3.jpg"
+                srcset="./images/team3.jpg 1x, ./images/team3@2x.jpg 2x"
+                src="./images/team3.jpg"
                 alt="Portrait of a woman"
                 width="264"
                 height="260"
@@ -244,7 +259,8 @@
             </li>
             <li class="team-list-item">
               <img
-                src="./images/img4.jpg"
+                srcset="./images/team4.jpg 1x, ./images/team4@2x.jpg 2x"
+                src="./images/team4.jpg"
                 alt="Portrait of a man"
                 width="264"
                 height="260"
@@ -287,15 +303,18 @@
           </ul>
         </div>
       </section>
-      <!-- section4 -->
-      <section class="portfolio-page">
+      <!-- #endregion -->
+
+      <!-- #region Portfolio -->
+      <section class="section portfolio-page">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="reversal-div">
                 <img
-                  src="./images/img5.jpg"
+                  srcset="./images/img1.jpg 1x, ./images/img1@2x.jpg 2x"
+                  src="./images/img1.jpg"
                   alt="viewports of the application"
                   width="360"
                   height="300"
@@ -314,7 +333,8 @@
             <li class="portfolio-list-item">
               <div class="reversal-div">
                 <img
-                  src="./images/img6.jpg"
+                  srcset="./images/img2.jpg 1x, ./images/img2@2x.jpg 2x"
+                  src="./images/img2.jpg"
                   alt="phone scanning"
                   width="360"
                   height="300"
@@ -333,7 +353,8 @@
             <li class="portfolio-list-item">
               <div class="reversal-div">
                 <img
-                  src="./images/img7.jpg"
+                  srcset="./images/img3.jpg 1x, ./images/img3@2x.jpg 2x"
+                  src="./images/img3.jpg"
                   alt="laptop and phone"
                   width="360"
                   height="300"
@@ -352,7 +373,8 @@
             <li class="portfolio-list-item">
               <div class="reversal-div">
                 <img
-                  src="./images/img8.jpg"
+                  srcset="./images/img4.jpg 1x, ./images/img4@2x.jpg 2x"
+                  src="./images/img4.jpg"
                   alt="car torpedo"
                   width="360"
                   height="300"
@@ -371,7 +393,8 @@
             <li class="portfolio-list-item">
               <div class="reversal-div">
                 <img
-                  src="./images/img9.jpg"
+                  srcset="./images/img5.jpg 1x, ./images/img5@2x.jpg 2x"
+                  src="./images/img5.jpg"
                   alt="moon on phone wallpaper"
                   width="360"
                   height="300"
@@ -390,7 +413,8 @@
             <li class="portfolio-list-item">
               <div class="reversal-div">
                 <img
-                  src="./images/img10.jpg"
+                  srcset="./images/img6.jpg 1x, ./images/img6@2x.jpg 2x"
+                  src="./images/img6.jpg"
                   alt="woman laughs"
                   width="360"
                   height="300"
@@ -409,12 +433,13 @@
           </ul>
         </div>
       </section>
+      <!-- #endregion -->
     </main>
 
-    <!-- #region page footer -->
-    <footer class="footer">
-      <div class="container">
-        <div class="div-footer-left">
+    <!-- #region page Footer -->
+    <footer class="section footer">
+      <div class="div-footer container">
+        <div class="div-footer-description">
           <a class="logo-footer" href="./index.html"
             >Web<span class="accent-footer">Studio</span></a
           >
@@ -483,7 +508,7 @@
     </footer>
     <!-- #endregion -->
 
-    <!-- #region modal window -->
+    <!-- #region Modal window -->
     <div class="backdrop">
       <div class="modal">
         <button
@@ -492,7 +517,7 @@
           aria-label="Modal close button"
         >
           <svg class="modal-button-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-modal"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-p">Leave your contacts and we will call you back</p>
@@ -578,6 +603,69 @@
           <button class="button-checkbox" type="submit">Send</button>
         </form>
       </div>
+    </div>
+    <!-- #endregion -->
+
+    <!-- #region Mobile menu -->
+    <div class="mobile-menu">
+      <button class="mobile-menu-close">
+        <svg class="mobile-icon-close" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-nav-list">
+        <li class="mobile-nav-item">
+          <a class="mobile-nav-link current" href="">Studio</a>
+        </li>
+        <li class="mobile-nav-item">
+          <a class="mobile-nav-link" href="">Portfolio</a>
+        </li>
+        <li class="mobile-nav-item">
+          <a class="mobile-nav-link" href="">Contacts</a>
+        </li>
+      </ul>
+      <ul class="mobile-list-contacts">
+        <li class="mobile-item-contacts">
+          <a class="link-mobile-contacts accent" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="mobile-item-contacts">
+          <a class="link-mobile-contacts" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-social-list">
+        <li class="team-item-icon">
+          <a class="team-link-icon-footer" href="instagram.com">
+            <svg class="team-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="team-item-icon">
+          <a class="team-link-icon-footer" href="twitter.com">
+            <svg class="team-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="team-item-icon">
+          <a class="team-link-icon-footer" href="facebook.com">
+            <svg class="team-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="team-item-icon">
+          <a class="team-link-icon-footer" href="linkedin.com">
+            <svg class="team-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <!-- #endregion -->
   </body>
