--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- normalize css -->
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,7 +58,7 @@
     <main>
       <!-- #region Hero -->
       <section class="hero-page">
-        <div class="container">
+        <div class="hero-container container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
@@ -85,7 +85,7 @@
             <li class="peculiarities-list-item">
               <div class="peculiarities-icon">
                 <svg class="" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="subject">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="peculiarities-list-item">
               <div class="peculiarities-icon">
                 <svg class="" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="subject">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="peculiarities-list-item">
               <div class="peculiarities-icon">
                 <svg class="" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="subject">Technologies</h3>
@@ -437,7 +437,7 @@
     </main>
 
     <!-- #region page Footer -->
-    <footer class="section footer">
+    <footer class="footer">
       <div class="div-footer container">
         <div class="div-footer-description">
           <a class="logo-footer" href="./index.html"
